--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start-server": "json-server --watch src/components/data/photos.json --port 3001",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
